--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ a {
     text-decoration: none;
 }
 
+
 img{
     max-width: 100%;
 }
@@ -15,119 +16,202 @@ img{
 
 body {
     background-color: antiquewhite;
+    font-family: 'Montserrat', sans-serif;
 }
 
-.menu-nav {
-    display: flex;
-    list-style: none;    
-    text-align: center;
-    margin-right: 1rem;
-    gap: 2rem; 
-    }
 
-.menu-nav li a {
+.navbar-nav a {
     color: black;
-    transition: all 0.5s;
+    transition: all 1s;
+    
 }
 
-.menu-nav li a:hover {
+.navbar-nav a:hover {
     background-color: antiquewhite;
     padding: 10px;
 }
 
-.card {
-    background-color: rosybrown;
-
-    padding-top: 3rem;
-    padding-right: 2rem;
-    padding-bottom: 8.5rem;
-    padding-left: 2rem;
-
-    margin-top: 2rem; 
-    margin-bottom: 2rem;
-
-    width: 200px ;
-
-    height: 250px;
-
-    border: solid 4px;
-
-    position: relative;    
-    }
-
-.card__oferta {
-    position: absolute;
-    top: 30px;
-    right: -50px;
-    background-color: rgb(225, 98, 98);
-}
-
-.card__imagen {
-    width: 300px;    
-    height: 250px;
-}
-
-.logo {
-    width: 100px;
-    display: block;
-    margin: 0 auto;
-    
-}
 
 header {
     position: fixed;
     top: 0;
     background-color: rosybrown;
     width: 100%;
-    z-index: 1;
-    display: flex;
+    z-index: 2;
     justify-content: space-between;
     align-items: center;
     
 }
 
 body {
-    margin-top: 90px;    
+    margin-top: 7rem;    
+}
+
+footer p {
+    font-size: 20px;
 }
 
 
-#productos {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 4rem;
-    justify-content: center;
-    
-}
+/* Cards */
 
-.bienvenida {
-    margin-left: 3rem;
+.padre-cards {
     display: flex;
-    justify-content: space-around;
-    gap: 5rem;
+    flex-direction: column;
     align-items: center;
-    flex-direction: row;
+    gap: 40px;
+    margin-top: 10rem;
+}
+    
+
+/* tablet */
+@media (min-width: 768px) {
+    .padre-cards {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        justify-items: center;
+    }
 }
 
-.bienvenida__imagen {
-    width: 250px;
-    height: 300px;
-    border-radius: 15px;
-    transition: all 1.5s; 
+
+/* desktop */
+@media (min-width: 992px) {
+    .padre-cards {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
-.bienvenida__imagen:hover {
-    transform: scale(1.3)
+/* desktop grande*/
+@media (min-width: 1200px) {
+    .padre-cards {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 20px;
+        }
 }
 
-.bienvenida__texto h1 {
+#carouselExample {
+    width: 500px;
+}
+
+.carousel-item img {
+    height: 600px;
+}
+
+.carousel-control-prev-icon, 
+.carousel-control-next-icon {
+    background-color: rosybrown;
+    border-radius: 50%;
+    padding: 10px;
+    z-index: 1;
+}
+
+.card img {
+    height: 400px;
+    width: 500px;
+}
+
+.card-body {
+    background-color: rosybrown;
+}
+
+footer {
+    background-color: rosybrown;
+    color: black;
+    padding: 1rem;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}  
+
+
+.right-links a {
+    padding: 2rem;
+    color: black;
+    margin-left: 1rem;
+    font-size: 20px;
+}  
+
+
+.fa {
+        width: 75px;   
+}
+
+
+.fa-facebook {
+    background: antiquewhite;
+    color: black;
+}
+
+
+.fa-whatsapp {
+    background: antiquewhite;
+    color: black;
+}
+
+.navbar-brand p  {
+    font-size: 25px;
+}
+
+.navbar-nav a {
+    font-size: 25px;
+}
+
+.card {
+    margin-bottom: 4rem;
+}
+
+
+.navbar .container-fluid {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: auto;
+    margin-top: 1rem;
+}
+
+.contacto {
+    text-align: center;
     margin-bottom: 2rem;
 }
 
-.bienvenida__texto p {
-    margin-bottom: 2rem;
+.contacto a {
+    font-size: 30px;
+    color: black;
+    background-color: rosybrown;
 }
 
-.bienvenida__texto h3 {
-    margin-bottom: 2rem;
+.mapa {
+    display: flex;
+    justify-content: center;
 }
 
+.historia {
+    display: flex;
+    gap: 3rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    text-align: center;
+    margin-top: 3rem;
+}
+
+.pf {
+    text-align: center;
+}
+
+.torta-logo {
+    width: 30px;
+    height: 30px;
+    margin-top: 0.5rem;
+}
+
+.navbar-brand {
+    display: flex;
+    gap: 0.5rem;
+    justify-content: center;
+}
+
+.nuestra-historia {
+    margin-top: 8rem;
+}
