4to commit, añado SASS + SEO + Mejoras generales a la pagina

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,229 +1,242 @@
+@charset "UTF-8";
+/*Paleta de colores*/
+/*Tamaños de pantalla*/
+/* Fuentes */
+/*MIXIN*/
 * {
-    margin: 0rem;
-    padding: 0rem;
+  margin: 0rem;
+  padding: 0rem;
 }
-
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-
-img{
-    max-width: 100%;
+img {
+  max-width: 100%;
 }
-
 
 body {
-    background-color: antiquewhite;
-    font-family: 'Montserrat', sans-serif;
+  background-color: antiquewhite;
+  font-family: "Montserrat", sans-serif;
+  margin-top: 7rem;
 }
-
 
 .navbar-nav a {
-    color: black;
-    transition: all 1s;
-    
+  color: black;
+  transition: all 1s;
+  font-size: 25px;
 }
-
 .navbar-nav a:hover {
-    background-color: antiquewhite;
-    padding: 10px;
+  background-color: antiquewhite;
+  padding: 10px;
 }
-
 
 header {
-    position: fixed;
-    top: 0;
-    background-color: rosybrown;
-    width: 100%;
-    z-index: 2;
-    justify-content: space-between;
-    align-items: center;
-    
-}
-
-body {
-    margin-top: 7rem;    
-}
-
-footer p {
-    font-size: 20px;
-}
-
-
-/* Cards */
-
-.padre-cards {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 40px;
-    margin-top: 10rem;
-}
-    
-
-/* tablet */
-@media (min-width: 768px) {
-    .padre-cards {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        justify-items: center;
-    }
-}
-
-
-/* desktop */
-@media (min-width: 992px) {
-    .padre-cards {
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-
-/* desktop grande*/
-@media (min-width: 1200px) {
-    .padre-cards {
-        grid-template-columns: repeat(4, 1fr);
-        gap: 20px;
-        }
-}
-
-#carouselExample {
-    width: 280px;
-}
-
-.carousel-item img {
-    height: 280px;
-}
-
-
-@media (min-width:516px) {
-    #carouselExample {
-        width: 500px;
-    }
-
-    .carousel-item img {
-        height: 600px;
-    }
-}
-
-
-.carousel-control-prev-icon, 
-.carousel-control-next-icon {
-    background-color: rosybrown;
-    border-radius: 50%;
-    padding: 10px;
-    z-index: 1;
-}
-
-.card img {
-    height: 400px;
-    width: 500px;
-}
-
-.card-body {
-    background-color: rosybrown;
+  position: fixed;
+  top: 0;
+  background-color: rosybrown;
+  width: 100%;
+  z-index: 2;
+  justify-content: space-between;
+  align-items: center;
 }
 
 footer {
-    background-color: rosybrown;
-    color: black;
-    padding: 1rem;
+  background-color: rosybrown;
+  color: black;
+  padding: 1rem;
+}
+footer p {
+  font-size: 20px;
+}
+
+#carouselExample {
+  width: 280px;
+}
+
+.carousel-item img {
+  height: 280px;
+}
+
+@media (min-width: 516px) {
+  #carouselExample {
+    width: 500px;
+  }
+  .carousel-item img {
+    height: 600px;
+  }
+}
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  background-color: rosybrown;
+  border-radius: 50%;
+  padding: 10px;
+  z-index: 1;
 }
 
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-}  
-
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
 
 .right-links a {
-    padding: 2rem;
-    color: black;
-    margin-left: 1rem;
-    font-size: 20px;
-}  
-
+  padding: 2rem;
+  color: black;
+  margin-left: 1rem;
+  font-size: 20px;
+}
 
 .fa {
-        width: 75px;   
+  width: 75px;
 }
 
-
-.fa-facebook {
-    background: antiquewhite;
-    color: black;
-}
-
-
+.fa-facebook,
 .fa-whatsapp {
-    background: antiquewhite;
-    color: black;
+  background: antiquewhite;
+  color: black;
 }
-
-.navbar-brand p  {
-    font-size: 25px;
-}
-
-.navbar-nav a {
-    font-size: 25px;
-}
-
-.card {
-    margin-bottom: 4rem;
-}
-
 
 .navbar .container-fluid {
-    display: flex;
-    align-items: flex-start;
-    margin-bottom: auto;
-    margin-top: 1rem;
-}
-
-.contacto {
-    text-align: center;
-    margin-bottom: 2rem;
-}
-
-.contacto a {
-    font-size: 30px;
-    color: black;
-    background-color: rosybrown;
-}
-
-.mapa {
-    display: flex;
-    justify-content: center;
-}
-
-.historia {
-    display: flex;
-    gap: 3rem;
-    margin-left: 3rem;
-    margin-right: 3rem;
-    text-align: center;
-    margin-top: 3rem;
-}
-
-.pf {
-    text-align: center;
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: auto;
+  margin-top: 1rem;
 }
 
 .torta-logo {
-    width: 30px;
-    height: 30px;
-    margin-top: 0.5rem;
+  width: 30px;
+  height: 30px;
+  margin-top: 0.5rem;
 }
 
 .navbar-brand {
-    display: flex;
-    gap: 0.5rem;
-    justify-content: center;
+  display: flex;
+  gap: 0.5rem;
+  justify-content: center;
+}
+.navbar-brand p {
+  font-size: 25px;
 }
 
-.nuestra-historia {
-    margin-top: 8rem;
+.divisor {
+  margin-top: 5rem;
+  background-color: rosybrown;
+  font-size: 60px;
+  display: block;
+  color: black;
 }
+
+.img-historia {
+  width: 500px;
+  height: 550px;
+}
+
+.strongs {
+  text-decoration: none;
+}
+
+.card {
+  margin-bottom: 5rem;
+}
+.card img {
+  height: 400px;
+  width: 500px;
+}
+
+.card-body {
+  background-color: rosybrown;
+}
+
+.padre-cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  margin-top: 5rem;
+}
+
+/* tablet */
+@media (min-width: 768px) {
+  .padre-cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+  }
+}
+/* desktop */
+@media (min-width: 992px) {
+  .padre-cards {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+/* desktop grande*/
+@media (min-width: 1200px) {
+  .padre-cards {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+  }
+}
+.card-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.btn, .btn-card {
+  border: solid 1px antiquewhite;
+  width: 200px;
+}
+
+.btn-card {
+  background-color: antiquewhite;
+  color: black;
+}
+.btn-card:hover {
+  background-color: black;
+  color: antiquewhite;
+  font-weight: 700;
+}
+
+.contacto {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.contacto a {
+  font-size: 30px;
+  color: black;
+  background-color: rosybrown;
+}
+
+.mapa {
+  display: flex;
+  justify-content: center;
+}
+
+.pf {
+  text-align: center;
+}
+
+@media (min-width: 1200px) {
+  .pf {
+    margin-left: 20rem;
+    margin-right: 20rem;
+  }
+}
+.historia {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+  margin-left: 3rem;
+  margin-right: 3rem;
+  margin-top: 3rem;
+}
+
+.titulo-historia {
+  margin-top: -1rem;
+}
+
+/*# sourceMappingURL=styles.css.map */
