Commit para la ultima entrega, cambios generales para mejoras de la pagina

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,6 +4,7 @@ $color-secundario: rosybrown;
 $color-letras: black;
 
 /*Tamaños de pantalla*/
+$chica: 363px;
 $celular: 516px;
 $tablet: 768px;
 $desktop: 992px;
