--- a/css/styles.css
+++ b/css/styles.css
@@ -52,13 +52,22 @@ footer p {
 }
 
 #carouselExample {
-  width: 280px;
+  width: 250px;
 }
 
 .carousel-item img {
-  height: 280px;
+  width: 250px;
+  height: 350px;
 }
 
+@media (min-width: 363px) {
+  #carouselExample {
+    width: 360px;
+  }
+  .carousel-item img {
+    height: 360px;
+  }
+}
 @media (min-width: 516px) {
   #carouselExample {
     width: 500px;
@@ -70,6 +79,8 @@ footer p {
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
   background-color: rosybrown;
+  width: 50rem;
+  height: 5rem;
   border-radius: 50%;
   padding: 10px;
   z-index: 1;
