--- a/scss/_globales.scss
+++ b/scss/_globales.scss
@@ -56,13 +56,23 @@ footer {
 }
 
 #carouselExample {
-    width: 280px;
+    width: 250px;
 }
 
-.carousel-item img {
-    height: 280px;
+.carousel-item img{
+    width: 250px;
+    height: 350px;
 }
 
+@media (min-width:$chica) {
+    #carouselExample {
+        width: 360px;
+    }
+
+    .carousel-item img {
+        height: 360px;
+    }
+}
 @media (min-width:$celular) {
     #carouselExample {
         width: 500px;
@@ -76,6 +86,8 @@ footer {
 .carousel-control-prev-icon, 
 .carousel-control-next-icon {
     background-color: $color-secundario;
+    width: 50rem;
+    height: 5rem;
     border-radius: 50%;
     padding: 10px;
     z-index: 1;
